% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/Matrix/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R{} Package \pkg{Matrix}}% MM: look into ../svn-log-from.all
\encoding{UTF-8}
%% NB: The date (yyyy-mm-dd) is the "Packaged:" date in ../DESCRIPTION

\section{Changes in version 1.5-5 (2023-04-28 r3878)}{
  \subsection{New Features}{
    \itemize{
      \item Methods for subscripting \code{Matrix} now use the more
      systematic code in \file{R/subscript.R} and
      \file{src/subscript.c}, becoming more efficient for all
      \code{lsparseMatrix}
      (no longer coercing to \code{dsparseMatrix} and back),
      sparse \code{symmetricMatrix}
      (no longer coercing to \code{generalMatrix} and back
      when \code{i} in \code{x[i, i]} is monotone),
      \code{unpackedMatrix}
      (no longer coercing to \code{matrix} and back), and
      \code{RsparseMatrix}
      (no longer coercing to \code{TsparseMatrix}, then to
      \code{CsparseMatrix}, then back to \code{TsparseMatrix}).
      \cr
      \code{x[i, j, drop = FALSE]} preserves the class of \code{x}
      in more cases where \code{x} is a \code{triangularMatrix},
      \code{diagonalMatrix}, or \code{pMatrix}, doing more complete
      checks on \code{i} and \code{j}.
      \cr
      Notably, for \code{x} inheriting from \code{RsparseMatrix},
      the result is now always an \code{RsparseMatrix}, rather than
      always a \code{TsparseMatrix}.
      
      \item \code{NULL} subscripts, as in \code{x[NULL]},
      \code{x[NULL, j]}, and \code{x[i, NULL]}, are now supported
      for \code{x} inheriting from \code{Matrix}.  They are handled
      as \code{integer(0)}, consistent with base R.

      \item Virtual class \code{MatrixFactorization} gains a
      \code{Dimnames} slot.  Now all factorizations preserve the
      \code{Dimnames} of the original, factorized \code{Matrix}.
      Previously, only subclasses \code{denseLU},